Update github projects index

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
   <link rel="shortcut icon" href="images/favicon.ico" />
 
-  <title>SITZ | Sitesh Shrivastava</title>
+  <title>sitz | Sitesh Shrivastava</title>
 </head>
 
 <body>
 
   <header>
     <div class="container">
-      <h1>SITZ | Sitesh Shrivastava</h1>
+      <h1>sitz | Sitesh Shrivastava</h1>
       <h2>GitHub Projects</h2>
 
       <section id="downloads">
-        <a href="https://github.com/SITZ/SITZ.github.io" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        <a href="https://github.com/sitz/sitz.github.io" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
       </section>
     </div>
   </header>
