--- a/index.html
+++ b/index.html
@@ -1,49 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sitz | Sitesh Shrivastava</title>
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #f9f9f9;
+            color: #333;
+            font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+            line-height: 1.5;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+        header {
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            border-bottom: 1px solid #ddd;
+            background: #fff;
+        }
+        header h1 {
+            font-size: 24px;
+            font-weight: bold;
+            color: #007acc;
+            margin: 0;
+        }
+        header p {
+            color: #555;
+            font-size: 14px;
+            margin: 0;
+        }
+        .main {
+            display: flex;
+            flex: 1;
+            overflow: hidden;
+            flex-direction: column;
+        }
+        .sidebar {
+            min-width: 150px;
+            background: #fff;
+            border-right: 1px solid #ddd;
+            padding: 1rem 0;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        @media (min-width: 768px) {
+            .main {
+                flex-direction: row;
+            }
+        }
+        .sidebar .tab {
+            padding: 1rem;
+            cursor: pointer;
+            color: #007acc;
+            text-align: left;
+            font-size: 16px;
+            border-bottom: 1px solid #ddd;
+            transition: background 0.3s;
+        }
+        .sidebar .tab:hover, .sidebar .tab.active {
+            background: #f0f0f0;
+            color: #0056b3;
+        }
+        .content {
+            flex: 1;
+            padding: 0;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+    <script>
+        function showTab(tabId, page) {
+            const tabs = document.querySelectorAll('.tab');
+            tabs.forEach(tab => tab.classList.remove('active'));
 
-  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+            document.querySelector(`[data-tab="${tabId}"]`).classList.add('active');
 
-  <link rel="shortcut icon" href="images/favicon.ico" />
+            const iframe = document.getElementById('content-frame');
+            iframe.src = page;
+        }
 
-  <title>sitz | Sitesh Shrivastava</title>
+        document.addEventListener('DOMContentLoaded', () => {
+            showTab('tab1', 'countries.html');
+        });
+    </script>
 </head>
-
 <body>
-
-  <header>
-    <div class="container">
-      <h1>sitz | Sitesh Shrivastava</h1>
-      <h2>GitHub Projects</h2>
-
-      <section id="downloads">
-        <a href="https://github.com/sitz/sitz.github.io" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-      </section>
+<header>
+    <h1>sitz | Sitesh Shrivastava</h1>
+    <p>Github web project demos</p>
+</header>
+<div class="main">
+    <div class="sidebar">
+        <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries travelled</div>
+        <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'flights.html')">Flights taken</div>
     </div>
-  </header>
-
-  <div class="container">
-    <section id="main_content">
-      <a href="TravelMap"><h3><li>Travel Map</li></h3></a>
-      <p>Map of all the countries visited by me on planet Earth</p>
-      <a href="TravelMap"><img src="images/travelmap.png"></img></a>
-    </section>
-  </div>
-
-  <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-    try {
-      var pageTracker = _gat._getTracker("UA-50649328-1");
-      pageTracker._trackPageview();
-    } catch(err) {}
-  </script>
-
+    <div class="content">
+        <iframe id="content-frame" src=""></iframe>
+    </div>
+</div>
 </body>
 </html>
