Restore google analytics tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8TWKVGFZP3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-8TWKVGFZP3');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sitz | Sitesh Shrivastava</title>
+    <title>Sitesh Shrivastava | sitz </title>
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <style>
         body {
@@ -98,7 +108,7 @@
 </head>
 <body>
 <header>
-    <h1>sitz | Sitesh Shrivastava</h1>
+    <h1>Sitesh Shrivastava | sitz</h1>
     <p>Github web project demos</p>
 </header>
 <div class="main">
