--- a/flights.html
+++ b/flights.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8TWKVGFZP3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-8TWKVGFZP3');
+    </script>
+
+    <title>Flight Routes Map</title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 
