Display internet trend bots lists across social media

--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
 <body>
 <header>
     <h1>Sitesh Shrivastava | sitz</h1>
-    <p>Github web project demos</p>
+    <p>Github demo web projects</p>
 </header>
 <div class="main">
     <div class="sidebar">
-        <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries travelled</div>
-        <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'flights.html')">Flights taken</div>
+        <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
+        <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'flights.html')">Flights</div>
+        <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'trendbots.html')">Trend Bots</div>
     </div>
     <div class="content">
         <iframe id="content-frame" src=""></iframe>
