Fix iframe link blocker and hyperlink icons

--- a/trendbots.html
+++ b/trendbots.html
@@ -41,13 +41,6 @@
             text-align: center;
         }
 
-        iframe {
-            width: 100%;
-            height: 600px;
-            border: none;
-            allow: "fullscreen; accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        }
-
         .logo {
             width: 50px;
             height: auto;
@@ -58,12 +51,16 @@
 <body>
 <div class="container">
     <div class="list-container">
-        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg"><br>
-        <a href="https://twitter.com/siteshps/lists/1865412858835865726">View list on X</a>
+        <a href="https://twitter.com/siteshps/lists/1865412858835865726" target="_blank">
+            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg">
+            <p>View list on X</p>
+        </a>
     </div>
     <div class="list-container">
-        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Bluesky_Logo.svg"><br>
-        <a href="https://bsky.app/profile/siteshps.bsky.social/lists/3lcptcq7cvg2l">View list on Bsky</a>
+        <a href="https://bsky.app/profile/siteshps.bsky.social/lists/3lcptcq7cvg2l" target="_blank">
+            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Bluesky_Logo.svg">
+            <p>View list on Bluesky</p>
+        </a>
     </div>
 </div>
 </body>
