Add cities travel map to the index, Update SEO tags and details on pages

--- a/flights.html
+++ b/flights.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8TWKVGFZP3"></script>
@@ -10,6 +9,14 @@
 
         gtag('config', 'G-8TWKVGFZP3');
     </script>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="Map of flight routes taken by Sitesh Shrivastava">
+    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Map, Flights">
+    <meta name="author" content="Sitesh Shrivastava">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/flights.html">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <title>Flight Routes Map</title>
 
@@ -35,8 +42,7 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css"/>
 
-    <meta name="viewport" content="width=device-width,
-                initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <style>
         #map_12e2ad84f71a362f950fe227cddbbfab {
             position: relative;
