--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
@@ -13,8 +12,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitesh Shrivastava | sitz </title>
+    <meta name="description" content="Index of web projects by Sitesh Shrivastava">
+    <meta name="keywords" content="Web, Software, Projects, Github, Technology">
+    <meta name="author" content="Sitesh Shrivastava">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com">
     <link rel="shortcut icon" href="images/favicon.ico"/>
+
+    <title>Sitesh Shrivastava | sitz </title>
+
     <style>
         body {
             margin: 0;
@@ -90,6 +96,7 @@
             border: none;
         }
     </style>
+
     <script>
         function showTab(tabId, page) {
             const tabs = document.querySelectorAll('.tab');
@@ -108,14 +115,14 @@
 </head>
 <body>
 <header>
-    <h1>Sitesh Shrivastava | sitz</h1>
-    <p>Github demo web projects</p>
+    <h1>Web project index</h1>
 </header>
 <div class="main">
     <div class="sidebar">
         <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
-        <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'flights.html')">Flights</div>
-        <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'trendbots.html')">Trend Bots</div>
+        <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
+        <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
+        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'trendbots.html')">Trend Bots</div>
     </div>
     <div class="content">
         <iframe id="content-frame" src=""></iframe>
