--- a/trendbots.html
+++ b/trendbots.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
@@ -13,7 +12,14 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trend Bots</title>
+    <meta name="description" content="Social media bots to get internet trends in the feed">
+    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Social Media, Internet Bots">
+    <meta name="author" content="Sitesh Shrivastava">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/trendbots.html">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+
+    <title>Internet Trend Bots</title>
     <style>
         body {
             font-family: Arial, sans-serif;
