--- a/countries.html
+++ b/countries.html
@@ -1,5 +1,4 @@
-<html>
-
+<html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8TWKVGFZP3"></script>
@@ -11,7 +10,16 @@
         gtag('config', 'G-8TWKVGFZP3');
     </script>
 
-    <title>World Travel Map</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Map of countries travelled by Sitesh Shrivastava">
+    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Map, World Travel, Countries">
+    <meta name="author" content="Sitesh Shrivastava">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/countries.html">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+
+    <title>World Travel Map: Countries</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
