Update trendbots index with telegram channel chats folder link

--- a/trendbots.html
+++ b/trendbots.html
@@ -75,6 +75,10 @@
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/4/48/Mastodon_Logotype_%28Simple%29.svg" alt="Mastodon Logo"><br>
         <a href="https://mastodon.social/lists/109020" target="_blank">Visit Mastodon List</a>
     </div>
+    <div class="list-container">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo"><br>
+        <a href="https://t.me/addlist/L5ycOhO6lqM0ZDM0" target="_blank">Visit Telegram List</a>
+    </div>
 </div>
 </body>
 </html>
