List reddit on trendbots

--- a/trendbots.html
+++ b/trendbots.html
@@ -79,6 +79,10 @@
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo"><br>
         <a href="https://t.me/addlist/L5ycOhO6lqM0ZDM0" target="_blank">Visit Telegram List</a>
     </div>
+    <div class="list-container">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/1/1f/Reddit_logo_2023.svg" alt="Reddit Logo"><br>
+        <a href="https://www.reddit.com/r/TrendBots/" target="_blank">Visit Reddit List</a>
+    </div>
 </div>
 </body>
 </html>
