List discord server on trendbots

--- a/trendbots.html
+++ b/trendbots.html
@@ -65,23 +65,27 @@
 <div class="container">
     <div class="list-container">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg" alt="X Logo"><br>
-        <a href="https://twitter.com/siteshps/lists/1865412858835865726" target="_blank">Visit X List</a>
+        <a href="https://twitter.com/siteshps/lists/1865412858835865726" target="_blank">Visit X list</a>
     </div>
     <div class="list-container">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Bluesky_Logo.svg" alt="Bluesky Logo"><br>
-        <a href="https://bsky.app/profile/siteshps.bsky.social/lists/3lcptcq7cvg2l" target="_blank">Visit Bluesky List</a>
+        <a href="https://bsky.app/profile/siteshps.bsky.social/lists/3lcptcq7cvg2l" target="_blank">Visit Bluesky list</a>
     </div>
     <div class="list-container">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/4/48/Mastodon_Logotype_%28Simple%29.svg" alt="Mastodon Logo"><br>
-        <a href="https://mastodon.social/lists/109020" target="_blank">Visit Mastodon List</a>
+        <a href="https://mastodon.social/lists/109020" target="_blank">Visit Mastodon list</a>
     </div>
     <div class="list-container">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo"><br>
-        <a href="https://t.me/addlist/L5ycOhO6lqM0ZDM0" target="_blank">Visit Telegram List</a>
+        <a href="https://t.me/addlist/L5ycOhO6lqM0ZDM0" target="_blank">Visit Telegram channel</a>
     </div>
     <div class="list-container">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/1/1f/Reddit_logo_2023.svg" alt="Reddit Logo"><br>
-        <a href="https://www.reddit.com/r/TrendBots/" target="_blank">Visit Reddit List</a>
+        <a href="https://www.reddit.com/r/TrendBots/" target="_blank">Visit Reddit sub</a>
+    </div>
+    <div class="list-container">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/9/98/Discord_logo.svg" alt="Discord Logo"><br>
+        <a href="https://discord.gg/UMcmR5UC" target="_blank">Visit Discord server</a>
     </div>
 </div>
 </body>
