Add classpass workout studios map page

--- a/index.html
+++ b/index.html
@@ -114,15 +114,13 @@
     </script>
 </head>
 <body>
-<header>
-    <h1>Web project index</h1>
-</header>
 <div class="main">
     <div class="sidebar">
         <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
         <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
         <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
-        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'trendbots.html')">Trend Bots</div>
+        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'workouts.html')">Workouts</div>
+        <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'trendbots.html')">Trend Bots</div>
     </div>
     <div class="content">
         <iframe id="content-frame" src=""></iframe>
