Add uber stats and update index page details

--- a/cities.html
+++ b/cities.html
@@ -11,14 +11,15 @@
     </script>
 
     <meta charset="UTF-8">
+
     <meta name="description" content="Map of cities travelled by Sitesh Shrivastava">
-    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Map, World Travel, Cities">
+    <meta name="keywords" content="Map, Cities, Travel">
     <meta name="author" content="Sitesh Shrivastava">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/cities.html">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
-    <title>World Travel Map: Cities</title>
+    <title>Cities traveled by Sitesh</title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 
