--- a/classpass.html
+++ b/classpass.html
@@ -12,15 +12,14 @@
 
     <meta charset="UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Map of Classpass studios where Sitesh Shrivastava has worked out">
-    <meta name="keywords" content="Map, Workout, Classpass">
+    <meta name="description" content="Map of ClassPass studios where Sitesh Shrivastava has worked out">
+    <meta name="keywords" content="Map, Workout, ClassPass">
     <meta name="author" content="Sitesh Shrivastava">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/workouts.html">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
-    <title>Classpass workout studios</title>
+    <title>ClassPass workouts by Sitesh</title>
 </head>
 
 <body>
