--- a/flights.html
+++ b/flights.html
@@ -11,14 +11,15 @@
     </script>
 
     <meta charset="UTF-8">
+
     <meta name="description" content="Map of flight routes taken by Sitesh Shrivastava">
-    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Map, Flights">
+    <meta name="keywords" content="Map, Flights, Travel">
     <meta name="author" content="Sitesh Shrivastava">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/flights.html">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
-    <title>Flight Routes Map</title>
+    <title>Flights taken by Sitesh</title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 
