--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Index of web projects by Sitesh Shrivastava">
-    <meta name="keywords" content="Web, Software, Projects, Github, Technology">
+    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Travel, Web">
     <meta name="author" content="Sitesh Shrivastava">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com">
@@ -119,8 +119,10 @@
         <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
         <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
         <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
-        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'workouts.html')">Workouts</div>
-        <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'trendbots.html')">Trend Bots</div>
+        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'classpass.html')">ClassPass</div>
+        <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'uber.html')">Uber</div>
+        <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Trend bots</div>
+        <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Hangman</div>
     </div>
     <div class="content">
         <iframe id="content-frame" src=""></iframe>
