--- a/trendbots.html
+++ b/trendbots.html
@@ -12,9 +12,9 @@
     </script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Social media bots to get internet trends in the feed">
-    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Social Media, Internet Bots">
+    <meta name="keywords" content="Social Media, Internet Bots">
     <meta name="author" content="Sitesh Shrivastava">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/trendbots.html">
