--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
         <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
         <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
         <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
-        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'classpass.html')">ClassPass</div>
-        <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'uber.html')">Uber</div>
+        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
+        <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">Classpass</div>
+        <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'uber.html')">Uber</div>
         <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Trend bots</div>
         <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Hangman</div>
     </div>
