--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
         <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
         <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">Classpass</div>
         <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'uber.html')">Uber</div>
-        <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Trend bots</div>
-        <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Hangman</div>
+        <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Follow: Trend bots</div>
+        <div class="tab" data-tab="tab9" onclick="showTab('tab9', 'chromeextensions.html')">Use: Chrome Extensions</div>
+        <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Play: Hangman</div>
     </div>
     <div class="content">
         <iframe id="content-frame" src=""></iframe>
