Add Twitter metadata for enhanced sharing and include preview image for flight routes

--- a/flights.html
+++ b/flights.html
@@ -17,7 +17,14 @@
     <meta name="keywords" content="Map, Flights, Travel">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/flights.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Flights taken by Sitesh">
+    <meta name="twitter:description" content="Map of flight routes taken by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_flights.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/flights">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <title>Flights taken by Sitesh</title>
