Update Twitter card metadata to use summary_large_image for improved sharing visuals

--- a/flights.html
+++ b/flights.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Sitesh Shrivastava">
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Flights taken by Sitesh">
     <meta name="twitter:description" content="Map of flight routes taken by Sitesh Shrivastava">
