Add twitter metadata to all html files

--- a/chromeextensions.html
+++ b/chromeextensions.html
@@ -13,14 +13,22 @@
 
     <meta charset="UTF-8">
 
-    <meta name="description" content="Chrome extensions to enhance your browsing experience">
-    <meta name="keywords" content="Chrome Extensions, Productivity, Tools">
+    <meta name="description" content="List of Chrome Extensions developed by Sitesh Shrivastava">
+    <meta name="keywords" content="Chrome Extensions, Sitesh Shrivastava, Developer Tools">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/chromeextensions.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Chrome Extensions by Sitesh">
+    <meta name="twitter:description" content="List of Chrome Extensions developed by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_chromeextensions.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/chromeextensions">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
-    <title>Chrome Extensions</title>
+    <title>Chrome Extensions by Sitesh</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
