--- a/cities.html
+++ b/cities.html
@@ -16,7 +16,14 @@
     <meta name="keywords" content="Map, Cities, Travel">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/cities.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Cities traveled by Sitesh">
+    <meta name="twitter:description" content="Map of cities travelled by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_cities.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/cities">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <title>Cities traveled by Sitesh</title>
@@ -4413,12 +4420,6 @@
     );
 
 
-    var circle_marker_e9c9da8d29d990637d9ed04f1520d06b = L.circleMarker(
-        [47.40705, 19.28648],
-        {"bubblingMouseEvents": true, "color": "orange", "dashArray": null, "dashOffset": null, "fill": true, "fillColor": "orange", "fillOpacity": 0.7, "fillRule": "evenodd", "lineCap": "round", "lineJoin": "round", "opacity": 1.0, "radius": 8, "stroke": true, "weight": 3}
-    ).addTo(map_b8700eec7750ea45a3bb4adfe5fdda22);
-
-
     circle_marker_e9c9da8d29d990637d9ed04f1520d06b.bindTooltip(
         `<div>
              Vecses, HU
@@ -6331,12 +6332,6 @@
 "sticky": true,
 }
     );
-
-
-    var circle_marker_0d8e878a63004850b8a324c7edb4f1bf = L.circleMarker(
-        [38.16082, 13.10099],
-        {"bubblingMouseEvents": true, "color": "orange", "dashArray": null, "dashOffset": null, "fill": true, "fillColor": "orange", "fillOpacity": 0.7, "fillRule": "evenodd", "lineCap": "round", "lineJoin": "round", "opacity": 1.0, "radius": 8, "stroke": true, "weight": 3}
-    ).addTo(map_b8700eec7750ea45a3bb4adfe5fdda22);
 
 
     circle_marker_0d8e878a63004850b8a324c7edb4f1bf.bindTooltip(
