--- a/classpass.html
+++ b/classpass.html
@@ -13,13 +13,22 @@
     <meta charset="UTF-8">
 
     <meta name="description" content="Map of ClassPass studios where Sitesh Shrivastava has worked out">
-    <meta name="keywords" content="Map, Workout, ClassPass">
+    <meta name="keywords" content="ClassPass, Fitness, Data Analysis, Visualization, Gym, Workout">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/workouts.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="ClassPass workouts by Sitesh">
+    <meta name="twitter:description" content="Map of ClassPass studios where Sitesh Shrivastava has worked out">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_classpass.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/classpass">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <title>ClassPass workouts by Sitesh</title>
+
+    <iframe src="https://www.google.com/maps/d/embed?mid=1g-Y8lAve0Kp4f53IbbIbmEM8g0YPEHM&ehbc=2E312F" width="100%" height="100%"></iframe>
 </head>
 
 <body>
