--- a/countries.html
+++ b/countries.html
@@ -12,14 +12,21 @@
 
     <meta charset="UTF-8">
 
-    <meta name="description" content="Map of countries travelled by Sitesh Shrivastava">
-    <meta name="keywords" content="Map, Countries, Travel">
+    <meta name="description" content="Map of countries visited by Sitesh Shrivastava">
+    <meta name="keywords" content="Map, Countries, Travel, Visualization, Sitesh Shrivastava">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/countries.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Countries visited by Sitesh">
+    <meta name="twitter:description" content="Map of countries visited by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_countries.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/countries">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
-    <title>Countries traveled by Sitesh</title>
+    <title>Countries visited by Sitesh</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
