--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
     </script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Index of web projects by Sitesh Shrivastava">
-    <meta name="keywords" content="Web, Software, Projects, Github, Technology, Travel, Web">
+
+    <meta name="description" content="Sitesh Shrivastava's code, projects & visualizations">
+    <meta name="keywords" content="Sitesh Shrivastava, Code, Projects, Visualizations, Portfolio">
     <meta name="author" content="Sitesh Shrivastava">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Code by Sitesh">
+    <meta name="twitter:description" content="Code, projects & visualizations by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_index.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
-    <title>Sitesh Shrivastava | sitz </title>
+    <title>Code by Sitesh Shrivastava</title>
 
     <style>
         body {
