--- a/trendbots.html
+++ b/trendbots.html
@@ -13,14 +13,22 @@
 
     <meta charset="UTF-8">
 
-    <meta name="description" content="Social media bots to get internet trends in the feed">
+    <meta name="description" content="List of internet trend bots for social media feed developed by Sitesh Shrivastava">
     <meta name="keywords" content="Social Media, Internet Bots">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/trendbots.html">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Internet Trend Bots by Sitesh">
+    <meta name="twitter:description" content="List of internet trend bots for social media feed developed by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_trendbots.png">
 
-    <title>Internet Trend Bots</title>
+    <link rel="canonical" href="https://code.siteshshrivastava.com/trendbots">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    
+    <title>Internet Trend Bots by Sitesh</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
