--- a/uber.html
+++ b/uber.html
@@ -17,7 +17,14 @@
     <meta name="keywords" content="Map, Uber, Commute">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/uber.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Uber rides by Sitesh">
+    <meta name="twitter:description" content="Map of uber rides taken by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_uber.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/uber">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <title>Uber rides by Sitesh</title>
