--- a/adventures.html
+++ b/adventures.html
@@ -16,7 +16,14 @@
     <meta name="keywords" content="Map, India, Adventure, Extreme sports">
     <meta name="author" content="Sitesh Shrivastava">
 
-    <link rel="canonical" href="https://code.siteshshrivastava.com/adventures.html">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@siteshps">
+    <meta name="twitter:title" content="Adventures by Sitesh">
+    <meta name="twitter:description" content="Map of adventure sport locations around India attempted by Sitesh Shrivastava">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_adventures.png">
+
+    <link rel="canonical" href="https://code.siteshshrivastava.com/adventures">
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <title>Adventures by Sitesh</title>
